# Project_6

install/: local_setup.sh  setup.sh
install/fun_numbers/lib/fun_numbers/: fibonacci_client  fibonacci_server
install/fun_numbers/share/fun_numbers/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fun_numbers/share/fun_numbers/launch/: action_test.launch.py
install/number_actions/share/number_actions/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/number_actions/share/number_actions/action/: Fibonacci.idl
install/number_actions/share/number_actions/cmake/: ament_cmake_export_targets-extras.cmake  export_number_actions__rosidl_generator_cExport-noconfig.cmake  export_number_actions__rosidl_generator_cppExport.cmake  export_number_actions__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_number_actions__rosidl_typesupport_fastrtps_cppExport.cmake  number_actionsConfig.cmake  number_actions__rosidl_typesupport_cExport.cmake  number_actions__rosidl_typesupport_cppExport-noconfig.cmake  number_actions__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
log/: latest_build  latest_list
src/fun_numbers/: CMakeLists.txt
src/fun_numbers/src/: fibonacci_client.cpp  fibonacci_server.cpp
src/number_actions/: CMakeLists.txt  package.xml
src/number_actions/action/: Fibonacci.action
(+10 files in other folders)
