<?xml version="1.0"?>
<package format="3">
  <name>fun_numbers</name>
  <version>0.0.1</version>
  <description>A ROS2 package for computing Fibonacci sequences using actions.</description>
  <maintainer email="nguyenhthien2001@gmail.com">thien</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>number_actions</depend>

  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
